@@ -124,9 +124,7 @@ public class table extends TestCase
     assertEquals("Surname", "doe", pc.get("surname"));
     assertEquals("Birthdate", birth, pc.get("birthdate"));
     assertEquals("Something else", "else", pc.get("something"));
-    try{
-      assertTrue(((Text)pc.get("comment")).compare(getExampleData()));
-    }catch(IOException e){}
+    assertEquals("Comment text", pc.get("comment"), new Text(getExampleData()) );
     assertNotNull(ptrOne);
 
     v=db.executeQuery(readIntSet, ptr);
